Add experimental ESP-C3-12F support

--- a/hardware/iot-uni-dongle/device.yaml
+++ b/hardware/iot-uni-dongle/device.yaml
@@ -1,13 +1,11 @@
 # EN:  Including additional packages.
 # RU:  Подключение дополнительных пакетов.
 packages:
-  # ESP-12E module minimal config
-  esp8266: !include ../esp12e/esp8266.yaml
+  # ESP-C3-12F module minimal config
+  esp32: !include ../esp-c3-12f/esp-c3-12f.yaml
   # Default common config
   default: !include ../../common/default.yaml
   # UART config
-  uart: !include ../esp12e/uart.yaml
-  # Config ESP-12F onboard led as status
-  status: !include ../esp12e/status-led.yaml
+  uart: !include ../esp-c3-12f/uart.yaml
   # HTTP server config
   web: !include ../../common/web.yaml
